--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -7,6 +7,8 @@
 
     font-size: 1.2rem;
 
+    user-select: none;
+
     & a {
         color: inherit;
     }
@@ -16,6 +18,7 @@
     }
 
     & > form > div {
+
         position: relative;
         margin: 1rem 0;
 
