--- a/frontend/src/pages/public/Signup.css
+++ b/frontend/src/pages/public/Signup.css
@@ -43,6 +43,7 @@
             font-size: 1.2rem;
             background-color: transparent;
             color: white;
+
         }
     }
 
@@ -82,6 +83,13 @@
     & > form > div.error {
         color: red;
         text-align: center;
+        white-space: pre-wrap;
+    }
+
+    & > form > div.success {
+        color: green;
+        text-align: center;
+        white-space: pre-wrap;
     }
 
     & hr {
