--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -2,18 +2,41 @@
     width: 100%;
     height: 5rem;
 
+    /* avoid possible overlapping with y-scrollbar */
+    box-sizing: border-box;
+    padding-right: 1rem;
+
+
     display: flex;
-    justify-content: space-between;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
     align-items: center;
 
     color: white;
     font-size: 1.2rem;
-    background-color: rgba(1, 1, 1, 0.3);
+    background-color: rgba(0, 0, 0, 0.9);
 
     & > div {
-        padding: 0 2rem;
-
+        height: 100%;
         display: flex;
+        align-items: center;
+        justify-content: center;
         gap: 1rem;
     }
+
+    & .logo-container {
+        height: 5rem;
+        width: 5rem;
+        
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & .logo {
+            max-height: 100%;
+            max-width: 100%;
+        }
+    }
 }
+
