--- a/frontend/src/pages/public/Index.css
+++ b/frontend/src/pages/public/Index.css
@@ -1,17 +1,33 @@
 .hero {
-    
-}
-
-.index-container {
-    width: 50rem;
-    padding: 3rem;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.61);
-
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
 
     align-items: center;
-    
+    justify-content: center;
+
+    & .logo-container {
+        width: 40%;
+
+        @media (max-width: 30rem) {
+            width: 60%;
+        }
+        
+        & .logo {
+            max-height: 100%;
+            max-width: 100%;
+        }
+    }
+
+    & .intro {
+        box-sizing: border-box;
+        width: 60%;
+        padding: 2rem;
+
+        @media (max-width: 30rem) {
+            width: 100%;
+            text-align: center;
+        }
+    }
 }
+
 
