--- a/frontend/src/pages/user/Dashboard.css
+++ b/frontend/src/pages/user/Dashboard.css
@@ -1,45 +1,10 @@
-.dashboard-container {
-    width: 50rem;
-    padding: 3rem;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.61);
-
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    gap: 1rem;
-
-    & .header {
-        width: 100%;
-        border: 1px solid white;
-
+.block-container {
+    & .block-header .options {
         display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-around;
-        align-items: center;
-
-        & button {
-            padding: 0.5rem 1rem;
-            font-size: 1.5rem;
-            font-weight: bold;
-            border-radius: 1rem;
-        }
+        flex-flow: row wrap;
+        gap: 1rem;
     }
-}
 
-
-.scan-container {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 1rem 2rem;
-    padding-bottom: 2rem;
-    margin: 1rem;
-    border: 1px solid white;
-
-    display: flex;
-    flex-flow: column nowrap;
-    
-    
     & .scan-entry {
         padding: 1rem;
         display: flex;
@@ -48,7 +13,63 @@
         justify-content: space-between;
 
         &:nth-child(even) {
-            background-color: rgba(255, 255, 255, 0.062);
+            background-color: rgba(0, 0, 0, 0.288);
+        }
+        &:nth-child(odd) {
+            background-color: rgba(34, 56, 255, 0.048);
+        }
+    }
+
+    & .article {
+        &:nth-child(even) {
+            background-color: rgba(0, 0, 0, 0.288);
+        }
+        &:nth-child(odd) {
+            background-color: rgba(34, 56, 255, 0.048);
+        }
+
+        box-sizing: border-box;
+        padding: 1rem;
+
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+
+        & .thumbnail {
+            flex: 1;
+
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+
+            max-height: 15rem;
+            min-width: 15rem;
+
+            & img {
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+
+        & .info {
+            flex: 1;
+            padding: 1rem;
+
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-evenly;
+            gap: 1rem;
+
+            min-width: 15rem;
+
+            & .article-title {
+                font-size: large;
+                font-weight: bold;
+                text-align: center;
+                
+            }
         }
     }
 }
+
