--- a/frontend/src/components/ErrorMessage.css
+++ b/frontend/src/components/ErrorMessage.css
@@ -3,6 +3,8 @@
     justify-content: center;
 
     & .error-message-text {
+        white-space: pre;
+
         padding: 1rem;
         color: white;
         background-color: rgba(255, 0, 0, 0.233);
