--- a/frontend/src/inputStyles.css
+++ b/frontend/src/inputStyles.css
@@ -10,6 +10,8 @@ button {
     font-size: 1.2rem;
     font-weight: bold;
 
+    user-select: none;
+
     min-width: 3rem;
     min-height: 3rem;
 
