--- a/frontend/src/pages/user/Dashboard.css
+++ b/frontend/src/pages/user/Dashboard.css
@@ -11,29 +11,24 @@
         flex-flow: row wrap;
         gap: 1rem;
         justify-content: space-between;
+    }
 
-        &:nth-child(even) {
-            background-color: rgba(0, 0, 0, 0.288);
-        }
-        &:nth-child(odd) {
-            background-color: rgba(34, 56, 255, 0.048);
-        }
+    & .article-wrapper-link {
+        text-decoration: none;
+        user-select: none;
     }
 
     & .article {
-        &:nth-child(even) {
-            background-color: rgba(0, 0, 0, 0.288);
-        }
-        &:nth-child(odd) {
-            background-color: rgba(34, 56, 255, 0.048);
-        }
-
         box-sizing: border-box;
         padding: 1rem;
 
         display: flex;
         flex-flow: row wrap;
         width: 100%;
+
+        &:hover {
+            box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, 0.596);
+        }
 
         & .thumbnail {
             flex: 1;
@@ -44,7 +39,7 @@
             align-items: center;
 
             max-height: 15rem;
-            min-width: 15rem;
+            min-width: 12rem;
 
             & img {
                 max-width: 100%;
@@ -61,7 +56,7 @@
             justify-content: space-evenly;
             gap: 1rem;
 
-            min-width: 15rem;
+            min-width: 12rem;
 
             & .article-title {
                 font-size: large;
