Add a github deploy action

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -104,6 +104,8 @@ body {
 
         display: flex;
         flex-flow: row wrap;
+        align-items: center;
+        gap: 1rem;
       }
     }
 
