make navbar collapsible

--- a/frontend/src/components/ErrorMessage.css
+++ b/frontend/src/components/ErrorMessage.css
@@ -11,6 +11,8 @@
     & .error-message-text {
         padding: 1rem;
         color: white;
+
+        white-space: pre-line;
     }
 
     & .error-message-icon {
