--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -18,12 +18,22 @@
     font-size: 1.2rem;
     background-color: rgba(0, 0, 0, 0.9);
 
+    @media screen and (max-width: 30rem) {
+        flex-direction: column;
+        padding: 0.5rem 0;
+        height: auto;
+    }
+
     & > div {
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 1rem;
+        column-gap: 1rem;
+
+        @media screen and (max-width: 30rem) {
+            flex-direction: column;
+        }
     }
 
     & .logo-container {
