--- a/frontend/src/components/SuccessMessage.css
+++ b/frontend/src/components/SuccessMessage.css
@@ -10,6 +10,8 @@
         padding: 1rem;
         color: white;
         background-color: rgba(0, 255, 34, 0.233);
+
+        white-space: pre-line;
     }
 
     & .success-message-icon {
