--- a/frontend/src/components/PageSwitcher.css
+++ b/frontend/src/components/PageSwitcher.css
@@ -3,8 +3,28 @@
 
     display: flex;
     flex-flow: row wrap;
-    gap: 1rem;
+    
 
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: 48rem) {
+        flex-direction: column;
+    }
+
+    & > div {
+        display: flex;
+        flex-flow: row wrap;
+
+        justify-content: center;
+        align-items: center;
+    }
+
+    & .pagination-button {
+        margin: 0.5rem;
+
+        @media screen and (max-width: 48rem) {
+            margin: 0.25rem;
+        }
+    }
 }
