--- a/frontend/src/pages/user/Dashboard.css
+++ b/frontend/src/pages/user/Dashboard.css
@@ -26,6 +26,11 @@
         flex-flow: row wrap;
         width: 100%;
 
+        @media screen and (max-width: 45rem) {
+            flex-direction: column;
+            
+        }
+
         &:hover {
             box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, 0.596);
         }
@@ -39,7 +44,7 @@
             align-items: center;
 
             max-height: 15rem;
-            min-width: 12rem;
+            /* min-width: 12rem; */
 
             & img {
                 max-width: 100%;
@@ -56,7 +61,7 @@
             justify-content: space-evenly;
             gap: 1rem;
 
-            min-width: 12rem;
+            /* min-width: 12rem; */
 
             & .article-title {
                 font-size: large;
