--- a/frontend/src/inputStyles.css
+++ b/frontend/src/inputStyles.css
@@ -60,6 +60,26 @@ input[type="text"], input[type="password"], input[type="email"] {
 
 }
 
+select {
+    box-sizing: border-box;
+
+    width: 100%;
+    height: 4rem;
+
+    padding: 1rem;
+
+    border-radius: 2rem;
+    border: 1px solid white;
+
+    font-size: 1.2rem;
+    background-color: transparent;
+    color: white;
+
+    option {
+        background-color: black;
+    }
+}
+
 div.input-with-custom-icon {
     position: relative;
 
