--- a/frontend/src/pages/user/Dashboard.css
+++ b/frontend/src/pages/user/Dashboard.css
@@ -7,13 +7,51 @@
 
     & .scan-entry {
         padding: 1rem;
+
         display: flex;
         flex-flow: row wrap;
+        justify-content: space-around;
+        align-items: center;
         gap: 1rem;
-        justify-content: space-between;
+
+        & div.info {
+            display: flex;
+            flex-flow: row wrap;
+            gap: 1rem;
+            justify-content: center;
+            align-items: stretch;
+
+            & > div {
+                padding: 1rem;
+                min-width: 3rem;
+                border-radius: 1rem;
+                background-color: rgba(142, 140, 158, 0.445);
+
+
+                display: flex;
+                flex-flow: column nowrap;
+                align-items: center;
+                justify-content: space-between;
+                gap: 0.5rem;
+
+                & .value {
+                    font-size: x-large;
+                    font-weight: bold;
+                }
+
+                & .description {
+                    font-size: small;
+                }
+            }
+        }
+
+        & .options {
+            display: flex;
+            gap: 1rem;
+        }
     }
 
-    & .article-wrapper-link {
+    & .wrapper-link {
         text-decoration: none;
         user-select: none;
     }
@@ -32,9 +70,7 @@
             max-height: none;
         }
 
-        &:hover {
-            box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, 0.596);
-        }
+        
 
         & .thumbnail {
             flex: 1;
@@ -73,3 +109,8 @@
     }
 }
 
+.box-highlight-on-hover {
+    &:hover {
+        box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, 0.596);
+    }
+}
