--- a/frontend/src/pages/public/Index.css
+++ b/frontend/src/pages/public/Index.css
@@ -27,7 +27,37 @@
             width: 100%;
             text-align: center;
         }
+
+        & .action-link {
+            display: flex;
+            justify-content: center;
+            margin-top: 3rem;
+            font-size: larger;
+        }
     }
 }
 
+.features {
+    margin-top: 5rem;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding: 1rem 2rem;
+    gap: 1rem;
 
+    & .feature {
+        background-color: rgba(0, 0, 0, 0.733);
+        border-radius: 2rem;
+
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: center;
+
+        & img {
+            max-width: 80%;
+            max-height: 80%;
+        }
+    }
+    
+}
