make the dashboard partially public

--- a/frontend/src/pages/public/Index/Index.css
+++ b/frontend/src/pages/public/Index/Index.css
@@ -30,7 +30,9 @@
 
         & .action-link {
             display: flex;
+            flex-flow: column nowrap;
             justify-content: center;
+            align-items: center;
             margin-top: 3rem;
             font-size: larger;
         }
