--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -20,7 +20,7 @@
 
     @media screen and (max-width: 30rem) {
         flex-direction: column;
-        padding: 0.5rem 0;
+        padding: 0.5rem 0 1rem 0;
         height: auto;
     }
 
